--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <td><textarea autofocus cols = "80" rows = "5" id="original"></textarea></td> 
       </tr>
     </table>
-    <button type="button">table:</button><br>
+    <button type="button">Presione aquí para calcular</button><br>
     <span class="output" id="finaltable"></span>
   </body>
 </html>
